--- a/ch04-keys-addresses.html
+++ b/ch04-keys-addresses.html
@@ -141,6 +141,20 @@
                 <div id="content" class="content">
                     <main>
                         <a class="header" href="#4-keys-addresses" id="4-keys-addresses"><h1>4. Keys, Addresses</h1></a>
+<a class="header" href="#41-generate-a-private-key" id="41-generate-a-private-key"><h3>4.1 Generate a private key</h3></a>
+<p>Your program should use a cryptographically secure pseudorandom number generator
+(CSPRNG) to generate random bits with sufficient entropy (at least 256 bits) and
+compute its SHA256 hash. Repeat this process in a loop until the value is less
+than the prime p as defined in the secp256k1 standard:</p>
+<pre>
+    p = FFFFFFFF FFFFFFFF FFFFFFFF FFFFFFFF FFFFFFFF FFFFFFFF FFFFFFFE FFFFFC2F<br>
+      = 2<sup>256</sup> - 2<sup>32</sup> - 2<sup>9</sup> - 2<sup>8</sup> - 2<sup>7</sup> - 2<sup>6</sup> - 2<sup>4</sup> - 1
+</pre>
+<p>Some programming languages may require a bignum library for dealing with very
+large numbers.</p>
+<p><strong>Reading</strong>: You may need to read more about entropy to make sure that your random
+number has sufficient entropy. Different operating systems have different
+sources of entropy.</p>
 
                     </main>
 
