--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Introduction - Mastering Bitcoin Exercises</title>
+        <title>Mastering Bitcoin Exercises - Mastering Bitcoin Exercises</title>
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -77,7 +77,7 @@
         </script>
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
-            <ol class="chapter"><li><a href="ch01-introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li><a href="ch02-how-bitcoin-works.html"><strong aria-hidden="true">2.</strong> How Bitcoin Works</a></li><li><a href="ch03-bitcoin-core-the-reference-implementation.html"><strong aria-hidden="true">3.</strong> Bitcoin Core: The Reference Implementation</a></li><li><a href="ch04-keys-addresses.html"><strong aria-hidden="true">4.</strong> Keys, Addresses</a></li><li><a href="ch05-wallets.html"><strong aria-hidden="true">5.</strong> Wallets</a></li><li><a href="ch06-transactions.html"><strong aria-hidden="true">6.</strong> Transactions</a></li><li><a href="ch07-advanced-transactions-and-scripting.html"><strong aria-hidden="true">7.</strong> Advanced Transactions and Scripting</a></li><li><a href="ch08-the-bitcoin-network.html"><strong aria-hidden="true">8.</strong> The Bitcoin Network</a></li><li><a href="ch09-the-blockchain.html"><strong aria-hidden="true">9.</strong> The Blockchain</a></li><li><a href="ch10-mining-and-consensus.html"><strong aria-hidden="true">10.</strong> Mining and Consensus</a></li><li><a href="ch11-bitcoin-security.html"><strong aria-hidden="true">11.</strong> Bitcoin Security</a></li><li><a href="ch12-blockchain-applications.html"><strong aria-hidden="true">12.</strong> Blockchain Applications</a></li></ol>
+            <ol class="chapter"><li class="affix"><a href="ch00-title-page.html">Mastering Bitcoin Exercises</a></li><li><a href="ch01-introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li><a href="ch02-how-bitcoin-works.html"><strong aria-hidden="true">2.</strong> How Bitcoin Works</a></li><li><a href="ch03-bitcoin-core-the-reference-implementation.html"><strong aria-hidden="true">3.</strong> Bitcoin Core: The Reference Implementation</a></li><li><a href="ch04-keys-addresses.html"><strong aria-hidden="true">4.</strong> Keys, Addresses</a></li><li><a href="ch05-wallets.html"><strong aria-hidden="true">5.</strong> Wallets</a></li><li><a href="ch06-transactions.html"><strong aria-hidden="true">6.</strong> Transactions</a></li><li><a href="ch07-advanced-transactions-and-scripting.html"><strong aria-hidden="true">7.</strong> Advanced Transactions and Scripting</a></li><li><a href="ch08-the-bitcoin-network.html"><strong aria-hidden="true">8.</strong> The Bitcoin Network</a></li><li><a href="ch09-the-blockchain.html"><strong aria-hidden="true">9.</strong> The Blockchain</a></li><li><a href="ch10-mining-and-consensus.html"><strong aria-hidden="true">10.</strong> Mining and Consensus</a></li><li><a href="ch11-bitcoin-security.html"><strong aria-hidden="true">11.</strong> Bitcoin Security</a></li><li><a href="ch12-blockchain-applications.html"><strong aria-hidden="true">12.</strong> Blockchain Applications</a></li></ol>
         </nav>
 
         <div id="page-wrapper" class="page-wrapper">
@@ -142,7 +142,19 @@
 
                 <div id="content" class="content">
                     <main>
-                        <a class="header" href="#1-introduction" id="1-introduction"><h1>1. Introduction</h1></a>
+                        <a class="header" href="#mastering-bitcoin-exercises" id="mastering-bitcoin-exercises"><h1>Mastering Bitcoin Exercises</h1></a>
+<p>Welcome to the Mastering Bitcoin Exercises workbook! This book provides
+supplementary exercises to the book <a href="https://amzn.to/2xcdsY9">Mastering Bitcoin 2nd Edition</a> by
+Andreas M. Antonopoulos.</p>
+<a class="header" href="#how-this-book-is-organized" id="how-this-book-is-organized"><h2>How This Book is Organized</h2></a>
+<p>The exercises in this book are simply grouped by the chapters of the Mastering
+Bitcoin 2nd Edition.</p>
+<a class="header" href="#license" id="license"><h2>License</h2></a>
+<p>&quot;Mastering Bitcoin - Second Edition&quot; by <a href="https://antonopoulos.com/">Andreas M. Antonopoulos LLC</a>
+is licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>.</p>
+<p><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a></p>
+<p>&quot;Mastering Bitcoin Exercises&quot; is therefore also licensed under a
+<a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
 
                     </main>
 
