Build: Add exercise 2.1

--- a/ch02-how-bitcoin-works.html
+++ b/ch02-how-bitcoin-works.html
@@ -143,6 +143,17 @@
                 <div id="content" class="content">
                     <main>
                         <a class="header" href="#2-how-bitcoin-works" id="2-how-bitcoin-works"><h1>2. How Bitcoin Works</h1></a>
+<a class="header" href="#21-payment-request-qr-code" id="21-payment-request-qr-code"><h3>2.1 Payment request QR code</h3></a>
+<p>Construct a QR code for a payment request with the following details:</p>
+<ul>
+<li>Bitcoin address: &quot;mrCDrCybB6J1vRfbwM5hemdJz73FwDBC8r&quot;</li>
+<li>Amount: &quot;0.00001&quot;</li>
+<li>Label: &quot;Blips and Chitz&quot;</li>
+<li>Message: &quot;Purchase tokens at Blips and Chitz&quot;</li>
+</ul>
+<p>Scan the QR code with a QR code reader to verify its contents.</p>
+<p><strong>Reading</strong>: <a href="https://github.com/bitcoin/bips/blob/master/bip-0021.mediawiki">BIP-21</a> is a short proposal that describes the URI scheme
+used in payment request QR codes.</p>
 
                     </main>
 
