--- a/print.html
+++ b/print.html
@@ -172,6 +172,17 @@ verify a text file.</p>
 markings, the format information, the timing pattern, and so on. If you can,
 find where the &quot;h&quot; and &quot;i&quot; is located in the grid of black and white.</p>
 <a class="header" href="#2-how-bitcoin-works" id="2-how-bitcoin-works"><h1>2. How Bitcoin Works</h1></a>
+<a class="header" href="#21-payment-request-qr-code" id="21-payment-request-qr-code"><h3>2.1 Payment request QR code</h3></a>
+<p>Construct a QR code for a payment request with the following details:</p>
+<ul>
+<li>Bitcoin address: &quot;mrCDrCybB6J1vRfbwM5hemdJz73FwDBC8r&quot;</li>
+<li>Amount: &quot;0.00001&quot;</li>
+<li>Label: &quot;Blips and Chitz&quot;</li>
+<li>Message: &quot;Purchase tokens at Blips and Chitz&quot;</li>
+</ul>
+<p>Scan the QR code with a QR code reader to verify its contents.</p>
+<p><strong>Reading</strong>: <a href="https://github.com/bitcoin/bips/blob/master/bip-0021.mediawiki">BIP-21</a> is a short proposal that describes the URI scheme
+used in payment request QR codes.</p>
 <a class="header" href="#3-bitcoin-core-the-reference-implementation" id="3-bitcoin-core-the-reference-implementation"><h1>3. Bitcoin Core: The Reference Implementation</h1></a>
 <a class="header" href="#4-keys-addresses" id="4-keys-addresses"><h1>4. Keys, Addresses</h1></a>
 <a class="header" href="#41-generate-a-private-key" id="41-generate-a-private-key"><h3>4.1 Generate a private key</h3></a>
