Build: Fix formatting

--- a/ch04-keys-addresses.html
+++ b/ch04-keys-addresses.html
@@ -154,8 +154,8 @@ than the prime p as defined in the secp256k1 standard:</p>
 </pre>
 <p>Some programming languages may require a bignum library for dealing with very
 large numbers.</p>
-<p><strong>Reading</strong>: You may need to read more about entropy to make sure that your random
-number has sufficient entropy. Different operating systems have different
+<p><strong>Reading</strong>: You may need to read more about entropy to make sure that your
+random number has sufficient entropy. Different operating systems have different
 sources of entropy.</p>
 <a class="header" href="#42-confirm-point-is-on-the-elliptic-curve" id="42-confirm-point-is-on-the-elliptic-curve"><h3>4.2 Confirm point is on the elliptic curve</h3></a>
 <p>In the Elliptic Curve Cryptography Explained section of the book, the following
