--- a/ch05-wallets.html
+++ b/ch05-wallets.html
@@ -155,7 +155,8 @@ sequence of bits.</p>
 <li>Map each 11-bit value to a word from the predefined dictionary of 2048 words.</li>
 <li>Print the mnemonic words in the correct order.</li>
 </ol>
-<p>Table 5-1: Checksum bits and number of mnemonic words depend on length of entropy.</p>
+<p>Table 5-1: Checksum bits and number of mnemonic words depend on length of
+entropy.</p>
 <table><thead><tr><th align="center"> Entropy (bits) </th><th align="center"> Checksum (bits) </th><th align="center"> Mnemonic length (words) </th></tr></thead><tbody>
 <tr><td align="center"> 128            </td><td align="center"> 4               </td><td align="center"> 12                      </td></tr>
 <tr><td align="center"> 160            </td><td align="center"> 5               </td><td align="center"> 15                      </td></tr>
@@ -163,9 +164,9 @@ sequence of bits.</p>
 <tr><td align="center"> 224            </td><td align="center"> 7               </td><td align="center"> 21                      </td></tr>
 <tr><td align="center"> 256            </td><td align="center"> 8               </td><td align="center"> 24                      </td></tr>
 </tbody></table>
-<p>Get the dictionary/wordlist from <a href="https://github.com/bitcoin/bips/blob/master/bip-0039.mediawiki">BIP-39</a>.
-There's a section that describes the characteristics of an ideal wordlist, and a
-separate section that links to the actual wordlists.</p>
+<p>Get the dictionary/wordlist from <a href="https://github.com/bitcoin/bips/blob/master/bip-0039.mediawiki">BIP-39</a>. There's a section that
+describes the characteristics of an ideal wordlist, and a separate section that
+links to the actual wordlists.</p>
 
                     </main>
 
