Build: Add exercises in chapter 4 and 5

--- a/ch04-keys-addresses.html
+++ b/ch04-keys-addresses.html
@@ -196,6 +196,14 @@ Efficient Cryptography (SEC), the base point G in compressed form is:</p>
 <pre><code>G = 04 79BE667E F9DCBBAC 55A06295 CE870B07 029BFCDB 2DCE28D9 59F2815B 16F81798
        483ADA77 26A3C465 5DA4FBFC 0E1108A8 FD17B448 A6855419 9C47D08F FB10D4B8
 </code></pre>
+<a class="header" href="#44-convert-a-public-key-into-a-bitcoin-address" id="44-convert-a-public-key-into-a-bitcoin-address"><h3>4.4 Convert a public key into a bitcoin address</h3></a>
+<p>Using the public key generated from the previous exercise, compute its SHA256
+hash and then compute the RIPEMD160 hash of the result to produce a 160-bit
+bitcoin address.</p>
+<pre>
+    A = RIPEMD160(SHA256(K))
+</pre>
+<p>This double-hash function is called HASH160.</p>
 
                     </main>
 
