Build: Add exercises in chapter 3

--- a/print.html
+++ b/print.html
@@ -206,7 +206,7 @@ It lists some libraries, clients and toolkits grouped by programming language.
 We can work on exercises that use any of these to expand on this chapter. With
 your programming language of choice, select the software in the list that you
 would like to explore and see if you can do any of the exercises below.</p>
-<a class="header" href="#31-decode-raw-transaction" id="31-decode-raw-transaction"><h3>3.1 Decode Raw Transaction</h3></a>
+<a class="header" href="#31-decode-a-raw-transaction" id="31-decode-a-raw-transaction"><h3>3.1 Decode a raw transaction</h3></a>
 <p>Using a client library, decode Alice's coffee transaction with the following
 transaction ID:</p>
 <pre><code>0627052b6f28912f2703066a912ea577f2ce4da4caa5a5fbd8a57286c345c2f2
@@ -215,6 +215,15 @@ transaction ID:</p>
 transaction that you will then have to decode, or you may directly get a
 human-readable format of the transaction.</p>
 <p>Check that you can see the same transaction inputs and outputs as in the book.</p>
+<a class="header" href="#32-find-alices-transaction-in-the-block" id="32-find-alices-transaction-in-the-block"><h3>3.2 Find Alice's transaction in the block</h3></a>
+<p>In the book, we saw that Alice's transaction was included in block 277316. Using
+a client library, obtain this block and find Alice's transaction in the list of
+transactions that the block contains.</p>
+<a class="header" href="#33-execute-getmempoolinfo" id="33-execute-getmempoolinfo"><h3>3.3 Execute <code>getmempoolinfo</code></h3></a>
+<p>The book mentioned <code>getmempoolinfo</code> as one of the more important RPC commands.
+Using the Bitcoin Core client or an alternative client library with a similar
+command, execute this command and get the details of the memory pool such as the
+minimum fee rate for a transaction to be accepted.</p>
 <a class="header" href="#4-keys-addresses" id="4-keys-addresses"><h1>4. Keys, Addresses</h1></a>
 <a class="header" href="#41-generate-a-private-key" id="41-generate-a-private-key"><h3>4.1 Generate a private key</h3></a>
 <p>Your program should use a cryptographically secure pseudorandom number generator
