Build: Add author and link to GitHub in title page

--- a/print.html
+++ b/print.html
@@ -143,6 +143,7 @@
                 <div id="content" class="content">
                     <main>
                         <a class="header" href="#mastering-bitcoin-exercises" id="mastering-bitcoin-exercises"><h1>Mastering Bitcoin Exercises</h1></a>
+<p><em>by Mikong Galero</em></p>
 <p>Welcome to the Mastering Bitcoin Exercises workbook! This book provides
 supplementary exercises to the book <a href="https://amzn.to/2xcdsY9">Mastering Bitcoin 2nd Edition</a> by
 Andreas M. Antonopoulos.</p>
@@ -155,6 +156,9 @@ is licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC B
 <p><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a></p>
 <p>&quot;Mastering Bitcoin Exercises&quot; is therefore also licensed under a
 <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
+<a class="header" href="#source" id="source"><h2>Source</h2></a>
+<p>The source files from which this book is generated can be found on
+<a href="https://github.com/xor63/mastering-bitcoin-exercises/tree/master/src">GitHub</a>.</p>
 <a class="header" href="#1-introduction" id="1-introduction"><h1>1. Introduction</h1></a>
 <a class="header" href="#11-digital-signature-with-openssl" id="11-digital-signature-with-openssl"><h3>1.1 Digital signature with OpenSSL</h3></a>
 <p>Use the <code>openssl</code> command-line tool to create an RSA key pair and to sign and
